[project]
name = "neural-network-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.5",
    "nump>=5.5.5.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest-shutil>=1.8.1",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
]
